[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/player2/player_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=26]

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0183
height = 21.9634

[node name="PlayerSmall" type="KinematicBody2D" groups=["player"]]
collision_mask = 3
collision/safe_margin = 0.5
script = ExtResource( 2 )

[node name="PlayerAnim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "attack"
frame = 8
playing = true
offset = Vector2( 1.5, -5 )

[node name="AttackNode" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="AttackNode" groups=["player_weapon"]]
position = Vector2( 18, 1 )
rotation = 0.243914
collision_layer = 8
collision_mask = 2

[node name="AttackCollision" type="CollisionShape2D" parent="AttackNode/AttackArea"]
unique_name_in_owner = true
rotation = 1.19528
shape = SubResource( 26 )
disabled = true

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 2 )

[node name="FlyTime" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -69 )
current = true

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2( 6, 8 )
enabled = true
cast_to = Vector2( 0, 17 )

[node name="RayCastFloor2" type="RayCast2D" parent="."]
position = Vector2( -10, 8 )
enabled = true
cast_to = Vector2( 0, 17 )

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="CrystalLabel" parent="UI" index="0"]
margin_left = -479.0
margin_top = -344.0
margin_right = -354.0
margin_bottom = -271.0

[node name="SignText" parent="UI" index="1"]
visible = false
margin_left = -139.0
margin_top = -143.0
margin_right = 161.0
margin_bottom = -63.0

[connection signal="animation_finished" from="PlayerAnim" to="." method="_on_PlayerAnim_animation_finished"]

[editable path="UI"]
